# xde-theme-blackbirds

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  README.md.in  RELEASE  THANKS  TODO  autogen.sh  configure.ac  configure.sh  configure.template  index.md
theme/: style  theme.ini  themerc
theme/adwm/: themerc
